[metadata]
description-file = README.md

[versioneer]
VCS = git
style = pep440
versionfile_source = pananse/_version.py
versionfile_build = pananse/_version.py
tag_prefix =
parentdir_prefix = pananse-

[flake8]
exclude = .git,build,pananse/_version.py
max-line-length = 88
extend-ignore = E203,E402,E501
select = C,E,F,W,B,B950
